Fix bug on manage profile

--- a/backend/web/css/style.css
+++ b/backend/web/css/style.css
@@ -2150,7 +2150,7 @@ breadcrumb CSS
 	position: relative;
 	z-index: 1;
 	background-color: #2180b6;
-	background-image: url(../image/astrologers-work1.jpg);
+	background-image: url(../image/bkg_rating.png);
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-size: cover;
